Add skeleton for app, engine, loader

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,17 @@ cmake_minimum_required(VERSION 3.27)
 
 project(RiskEngine)
 
-SET(compile_sources app.cpp)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_executable(main ${compile_sources})
+# Add directories
+add_subdirectory(app)
+add_subdirectory(engine)
+add_subdirectory(loader)
+
+# Main executable
+add_executable(main main.cpp)
+
+# Link submodules to the executable
+target_link_libraries(main PRIVATE app engine loader)
